# toy_lib

./: CMakeLists.txt  README.md  toy_lib.pc.in  toy_libConfig.cmake.in
include/toy_lib/: toy_lib.hpp
src/: toy_lib.cpp
